<resources>
    <string name="app_name">My Morning Basic App</string>
    <string name="action_call_text">Call</string>
    <string name="action_sms_text">SMS</string>
    <string name="action_contact_us_text">Contact Us</string>
    <string name="action_logout_text">Log Out</string>
    <string name="action_exit_app_text">Exit App</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>